<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.impl.ChooseImageActivity">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:icon="@drawable/ic_camera_alt_black_24dp"
            android:onClick="startCamera"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:icon="@drawable/ic_image_black_24dp"
            android:onClick="startGallery"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/last_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_photo"
            app:icon="@drawable/ic_replay_black_24dp"
            android:onClick="startLastPhoto"
            android:visibility="gone"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>