<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_number_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/title_in_add_graph_value_activity_edit_text_number_value_title"
        app:endIconMode="clear_text"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_number_value">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_unit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:visibility="gone"
            android:hint="@string/title_in_add_graph_value_activity_edit_text_unit_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_view_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_set_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_in_add_graph_value_activity_button_set_unit_title"
            android:onClick="startSetUnit"
            app:layout_constraintTop_toBottomOf="@id/text_view_unit_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="?attr/materialButtonOutlinedStyle"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_set_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/title_in_add_graph_value_activity_button_set_color"
        android:onClick="startSetColor"
        app:icon="@drawable/ic_image_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/layout_unit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:text="@string/title_in_add_graph_value_activity_button_add_graph_value"
        android:onClick="startReturnResult"
        app:icon="@drawable/ic_add_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/button_set_color"
        style="@style/Widget.MaterialComponents.Button.Icon"/>


</androidx.constraintlayout.widget.ConstraintLayout>